syntax="proto3";

package multiple_oneof;

message Oneof1 {
  oneof msg {
    string OptionA = 1;
    string OptionB = 2; 
  }
}

message Oneof2 {
  oneof msg {
    string OptionA = 1;
    string OptionD = 2; 
  }
  oneof msg2 {
    double OptionC = 3;
  }
  oneof msg3 {
    double OptionE = 4;
  }
}